updating markup for Contacts page

--- a/advokatplus/advokatplus/Views/Shared/_Layout.cshtml
+++ b/advokatplus/advokatplus/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Prices">Цены</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacts">Контакты</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a>
                         </li>
                     </ul>
                 </div>
