--- a/advokatplus/advokatplus/Views/Posts/Create.cshtml
+++ b/advokatplus/advokatplus/Views/Posts/Create.cshtml
@@ -19,13 +19,13 @@
                 <span asp-validation-for="PostName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PostDiscription" class="control-label"></label>
-                <input asp-for="PostDiscription" class="form-control" />
-                <span asp-validation-for="PostDiscription" class="text-danger"></span>
+                <label asp-for="PostDescription" class="control-label"></label>
+                <input asp-for="PostDescription" class="form-control" />
+                <span asp-validation-for="PostDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PostContent" class="control-label"></label>
-                <textarea asp-for="PostContent" id="summernote"> </textarea>
+                <textarea asp-for="PostContent" class="form-control" id="summernote"> </textarea>
                 <span asp-validation-for="PostContent" class="text-danger"></span>
             </div>
             <div class="form-group">
