--- a/advokatplus/advokatplus/Views/Posts/Delete.cshtml
+++ b/advokatplus/advokatplus/Views/Posts/Delete.cshtml
@@ -19,10 +19,10 @@
             @Html.DisplayFor(model => model.PostName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PostDiscription)
+            @Html.DisplayNameFor(model => model.PostDescription)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PostDiscription)
+            @Html.DisplayFor(model => model.PostDescription)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PostContent)
