--- a/advokatplus/advokatplus/Views/Posts/Details.cshtml
+++ b/advokatplus/advokatplus/Views/Posts/Details.cshtml
@@ -7,37 +7,41 @@
 
 <h1>Details</h1>
 
-<div>
-    <h4>Post</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PostName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PostName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PostDiscription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PostDiscription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PostContent)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PostContent)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TimeStamp)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TimeStamp)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.PostID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h1 class="card-title">@Model.PostName</h1>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title text-black-50">@Model.PostDescription</h5>
+                <div class="card-text">
+                    @Html.Raw(Model.PostContent)
+                </div>
+                <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@Model.PostID">Edit</a>
+                <a class="btn btn-outline-primary" asp-action="Index">Back to List</a>
+            </div>
+            <div class="card-footer text-muted">
+                @Model.TimeStamp
+            </div>
+        </div>
+        <div>
+        </div>
+
+        <div id="disqus_thread"></div>
+        <script>
+            var disqus_config = function () {
+            this.page.url = "https://localhost:44360/Posts/Details/"+@Model.PostID;   // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = @Model.PostID; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            (function () { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://advokatplus.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+    </div>
 </div>
