--- a/advokatplus/advokatplus/Views/Posts/Edit.cshtml
+++ b/advokatplus/advokatplus/Views/Posts/Edit.cshtml
@@ -10,7 +10,7 @@
 <h4>Post</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="PostID" />
@@ -20,13 +20,13 @@
                 <span asp-validation-for="PostName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PostDiscription" class="control-label"></label>
-                <input asp-for="PostDiscription" class="form-control" />
-                <span asp-validation-for="PostDiscription" class="text-danger"></span>
+                <label asp-for="PostDescription" class="control-label"></label>
+                <input asp-for="PostDescription" class="form-control" />
+                <span asp-validation-for="PostDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PostContent" class="control-label"></label>
-                <input asp-for="PostContent" class="form-control" />
+                <textarea asp-for="PostContent" class="form-control" id="summernote"> </textarea>
                 <span asp-validation-for="PostContent" class="text-danger"></span>
             </div>
             <div class="form-group">
